--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
+*{
+    box-sizing: border-box;
+}
+
 html{
     height:100%;
 }
 
 body{
     height:100%;
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Lato", sans-serif;
 }
 
 .calc-container{
+    position: absolute;
+    left: 50%;
+    height:50%;
+    transform: translateX(-50%);
     width:80%;
+    height:auto;
     border:2px solid #000;
 }
 
@@ -21,16 +27,19 @@ body{
     margin:0;
     background-color:rgb(150, 224, 253);
     padding:10px;
-    font-family:Arial, Helvetica, sans-serif
+    font-family: "Lato", sans-serif;
+    font-weight:400;
 }
 
 .calc-wrapper{
     width:100%;
     display:flex;
+    flex-wrap: wrap;
 }
 
 .calc-input{
     width:55%;
+    min-width:300px;
 }
 
 .calc-input > div{
@@ -59,25 +68,28 @@ body{
     top:10px;
     z-index:10;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px 10px 10px 10px;
     box-sizing:border-box;
+    font-weight:600;
 }
 
 .amount-title + span:nth-child(2):before{
     content:"₹";
     border-radius: 5px 0 0 5px;
     left:5px;
+    padding: 10px 10px 10px 14px;
 }
 
 .time-title + span:nth-child(2):before{
     content:"Yrs";
     border-radius: 0 5px 5px 0;
+    padding: 10px 20px 10px 5px;
     right:0;
 }
 
 .return-title + span:nth-child(2):before{
     content:"%";
     border-radius: 0 5px 5px 0;
+    padding: 10px 10px 10px 10px;
     right:0;
 }
 
@@ -147,10 +159,31 @@ body{
 
 h3, h4{
     text-align: center;
+    margin-bottom:5px;
+    margin-top:40px;
+    font-size:1rem;
 }
 
 .output-value{
     width:100%;
     display:inline-block;
     text-align: center;
+    font-size:1rem;
+    font-weight:400;
+}
+
+.total-wealth .output-value{
+    font-size:xx-large;
+    font-weight:bolder;
+    color:blue;
+}
+
+@media screen and (max-width: 700px){
+    .calc-input{
+        width:100%;
+    }
+
+    .calc-output{
+        width:100%;
+    }
 }
