--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     height:50%;
     transform: translateX(-50%);
     width:80%;
+    min-width:320px;
     height:auto;
     border:2px solid #000;
 }
@@ -179,6 +180,9 @@ h3, h4{
 }
 
 @media screen and (max-width: 700px){
+    .calc-container{
+        width:100%;
+    }
     .calc-input{
         width:100%;
     }
